<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="Profile"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_refresh_home_Id"
        android:icon="@drawable/ic_refresh"
        android:title="Refresh"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@mipmap/ic_launcher"
        android:title=""
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:title="@string/action_profile"
        app:showAsAction="never"
        android:visible="false"/>

    <!-- Web -->
    <item android:id="@+id/action_web"
        android:title="@string/action_web"
        app:showAsAction="never" />

    <!-- Contact Us -->
    <item android:id="@+id/action_contactus"
        android:title="@string/action_contactus"
        app:showAsAction="never" />

    <!-- Undo -->
    <item android:id="@+id/action_signout"
        android:title="@string/action_signout"
        app:showAsAction="never" />


</menu>